# TrueSign

./: .env.example  .eslintrc.json  .gitignore  Cargo.toml  README.md  docker-compose.yml  migrations.json  nx.json  package.json  pyproject.toml  requirements.txt  tsconfig.base.json
.github/ISSUE_TEMPLATE/: weekly-progress-update.md
.github/workflows/: codeql.yml
apps/admin/: next.config.js  project.json
apps/admin/components/students/: addNew.tsx  import.tsx
apps/admin/components/students/newIntake/: scanner.students.tsx  stepper.students.tsx  table.students.tsx
apps/admin/layouts/: sidebar.layout.tsx  superadmin.layout.tsx
apps/admin/pages/: _app.tsx  index.tsx  invite.tsx  students.tsx
apps/admin/pages/sign-in/: [[...index]].tsx
apps/admin/pages/students/: new_intake.tsx
apps/admin/services/: pdf.ts
apps/admin/store/: studentImport.store.ts
apps/api/: Dockerfile  project.json  tsconfig.app.json
apps/api/src/: main.ts  types.d.ts
apps/api/src/controllers/: attendance.controller.ts  images.controller.ts  invite.controller.ts  modules.controller.ts  students.controller.ts
apps/api/src/middleware/: clerk.ts
apps/api/src/services/: attendance.service.ts  invite.service.ts  minio.service.ts  modules.service.ts  s3.service.ts  students.service.ts
apps/api/src/services/clerk/: clerk.service.ts
apps/api/src/services/storage/: minio.service.ts  s3.service.ts  storage.interface.ts
apps/backend/: filter.py  pdf.py  wsgi.py
apps/mobile/: app.json  package.json
apps/mobile/android/app/: BUCK  build.gradle
apps/mobile/src/: app.tsx  routes.tsx
apps/mobile/src/screens/: auth.screen.tsx  camera.screen.tsx  fyp.screen.tsx  splash.screen.tsx
apps/mobile/src/services/: camera.service.tsx  logger.service.tsx
apps/mobile/src/store/: auth.store.tsx
apps/server/: Dockerfile  project.json
apps/server/src/: main.ts
apps/server/src/controllers/: attendance.controller.ts  images.controller.ts  students.controller.ts
apps/server/src/middleware/: clerk.ts
apps/server/src/services/: attendance.service.ts  students.service.ts
apps/services/cornery/: README.md  project.json  pyproject.toml
apps/services/cornery/src/: index.py  kafka_service.py
apps/services/cornery/src/cornery/: app.py  index.py  kafka_service.py  minio_service.py  mongo.py
apps/services/cornery/tests/: test_index.py
apps/services/services-storage-e2e/: jest.config.ts  project.json
apps/services/sign-process/: README.md  project.json  pyproject.toml
apps/services/sign-process/services_sign_process/: __init__.py  absent.py  app.py  db.py  dl.py  hints.py  index.py  preprocess.py
apps/services/sign-process/services_sign_process/model/: __init.py  signet.py
apps/services/sign-process/tests/: test_index.py
apps/services/storage/: Dockerfile  jest.config.ts  project.json
apps/services/storage/src/: main.ts
apps/services/table2cell/: README.md  project.json  pyproject.toml
apps/services/table2cell/table2cell/: constants.py  cv.py  db.py  demo.py  hints.py  index.py  s3.py
apps/services/table2cell/table2cell/process/: attendance.py  refsheets.py
apps/services/tces/: README.md  project.json  pyproject.toml
apps/services/tces/src/: __init__.py  db_init.py  index.py  sign.py  tinsert.py  wsgi.py
apps/services/tces/tests/: test_index.py
apps/web/: .env.local  middleware.ts
apps/web/components/attendance/: confirm.card.tsx
apps/web/components/modules/: create.tsx  view.tsx
apps/web/components/scanner/: footer.tsx  index.tsx  pointer.tsx  sidebar.tsx  stage.tsx  toolbar.tsx
apps/web/pages/: _app.tsx  index.tsx  modules.tsx
apps/web/pages/dashboard/: new.tsx  scan.tsx  upload.tsx
apps/web/pages/reports/: [id].tsx  index.tsx
apps/web/pages/sign-up/: [[...index]].tsx
apps/web/services/: opencv.tsx  pdf.tsx
apps/web/store/: scanner.store.ts
apps/web/types/: index.ts
assets/tobacco_800/: README.md
assets/tobacco_800/dataset/: abm69c00.tif  adn64a00-page02_2.tif  ahs60f00.tif  aji32e00-page02_1.tif  ajy01c00.tif  arr09c00.tif  asx34c00-page02_1.tif  avc85f00-page02_3.tif  aww54f00_1.tif  aww54f00_2.tif  bbl21f00.tif  bmc19d00.tif  bnj00a00.tif  bnp51a00.tif  bqz95d00.tif  btc51a00.tif  cad45f00-page02_1.tif  cad45f00-page02_2.tif  cbm67e00-page02_2.tif  cbp51e00_2.tif  cdp7aa00-var.tif  ceo64a00-page02_2.tif  cgx54f00_1.tif  cgx54f00_2.tif  cgy54f00_1.tif  cgy54f00_2.tif  chg15f00-full_2.tif  chg15f00-full_4.tif  cio55e00-page02-variant_1.tif  cio55e00-page02-variant_2.tif  cir10f00.tif  ciy01a00-page02_1.tif  ciy01a00-page02_2.tif  cle30a00.tif  cmw44e00.tif  cpz95d00-variant_1.tif  cqc13f00.tif  csr09c00.tif  cvg13f00.tif  cxi59c00_2.tif  (+154 more)
assets/tobacco_800/ground_truth/: aam09c00.xml  abm69c00.xml  adn64a00-page02_2.xml  ahs60f00.xml  aji32e00-page02_1.xml  ajy01c00.xml  amk00a00.xml  amy31e00.xml  arr09c00.xml  asx34c00-page02_1.xml  avc85f00-page02_3.xml  aww54f00_1.xml  aww54f00_2.xml  bbl21f00.xml  bfr18e00-page02_2.xml  bmc19d00.xml  bnj00a00.xml  bnp51a00.xml  bqz95d00.xml  btc51a00.xml  cad45f00-page02_1.xml  cad45f00-page02_2.xml  cbm67e00-page02_2.xml  cbp51e00_2.xml  cdp7aa00-var.xml  ceo64a00-page02_2.xml  cgx54f00_1.xml  cgx54f00_2.xml  cgy54f00_1.xml  cgy54f00_2.xml  chg15f00-full_2.xml  chg15f00-full_4.xml  cio55e00-page02-variant_1.xml  cio55e00-page02-variant_2.xml  cir10f00.xml  ciy01a00-page02_1.xml  ciy01a00-page02_2.xml  cji44a00.xml  cle30a00.xml  cmw44e00.xml  (+211 more)
docker/server/: docker-compose.yml
minio/: README.md  mc.Dockerfile  mc.sh
notebooks/demo/: 01_warp.ipynb  02_absent.ipynb  03_preprocessing.ipynb  04_verification.ipynb  collage.py  merge.ipynb  preprocessing.py  signet.py
notebooks/empty_cell_detection/: empty_cell_detection.ipynb
scripts/cell/: extract.ipynb
scripts/csv/: generateNewStudents.py
scripts/table_extraction/: cell_extract.ipynb
scripts/yolo/: annotation_convert.ipynb
tmp/apps/services/storage/: tsconfig.generated.json
(+812 files in other folders)
