[tool.poetry]
name = "init"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  faker = "^19.3.0"

    [tool.poetry.dependencies.table2cell]
    path = "apps/services/table2cell"
    develop = true

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
