[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/packages/cornery/html' --cov-report xml:'../../coverage/packages/cornery/coverage.xml' --junitxml='../../reports/packages/cornery/unittests/junit.xml' --html='../../reports/packages/cornery/unittests/html/index.html'"

[tool.poetry]
name = "cornery"
version = "1.0.0"
description = "Detect corners of given image"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "cornery"
  from = "src"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  confluent-kafka = "^2.0.2"
  minio = "^7.1.13"
  opencv-python = "^4.7.0.72"



[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
