[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../coverage/packages/services/tces/html' --cov-report xml:'../../../coverage/packages/services/tces/coverage.xml' --junitxml='../../../reports/packages/services/tces/unittests/junit.xml' --html='../../../reports/packages/services/tces/unittests/html/index.html'"

[tool.poetry]
name = "tcse"
version = "1.0.0"
description = "Table Cell Extractor Service"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "src"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.12"
  flask = "^2.2.3"
  numpy = "^1.24.2"
  matplotlib = "^3.7.1"
  opencv-python = "^4.7.0.72"
  pytesseract = "^0.3.10"
  pymongo = "^4.3.3"
  python-dateutil = "^2.8.2"



[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
