[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../coverage/packages/services/tces/html' --cov-report xml:'../../../coverage/packages/services/tces/coverage.xml' --junitxml='../../../reports/packages/services/tces/unittests/junit.xml' --html='../../../reports/packages/services/tces/unittests/html/index.html'"

[tool.poetry]
name = "tcse"
version = "1.0.0"
description = "Table Cell Extractor Service"
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "src"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
